feat: add BibleMapSuite with deployment configuration
- Implemented comprehensive biblical maps module with Mapbox GL JS
- Added 20 biblical locations with bilingual support (EN/UA)
- Created 5 journey routes (Paul's journeys, Exodus, Jesus' ministry)
- Integrated distance calculator with Biblical Walking Days
- Added export capabilities (PNG, JPEG, PDF)
- Implemented Snap-to-Note feature for sermon preparation

Deployment Configuration:
- Created comprehensive README.md with features and setup
- Added DEPLOYMENT.md with multi-platform deployment guides
- Configured Vercel, Netlify, and Docker deployments
- Added PM2 ecosystem configuration for production
- Created environment variable templates
- Added LICENSE (MIT) and CONTRIBUTING.md
- Updated .gitignore to exclude database and sensitive files

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ coverage
 build
 dist
 
+# Database
+*.db
+*.db-journal
+prisma/migrations
+
 # Misc
 .DS_Store
 .env
@@ -20,3 +25,24 @@ dist
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# PM2
+.pm2
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Logs
+logs
+*.log
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# OS
+Thumbs.db
