--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "build": "npx prisma generate && npx prisma migrate deploy",
+    "postinstall": "npx prisma generate",
+    "seed:all": "node prisma/seed.js && node prisma/seed-strongs.js && node prisma/seed-map-data.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
