--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: biblestudy-backend
-    env: node
+    runtime: node
     region: oregon
     plan: free
     buildCommand: npm install && npx prisma generate && npx prisma migrate deploy
@@ -13,7 +13,6 @@ services:
         fromDatabase:
           name: biblestudy-db
           property: connectionString
-    healthCheckPath: /api/bible/versions
 
 databases:
   - name: biblestudy-db
